# rlang-compiler

./: README.md  build_env.py  ir.py  main.py  pyproject.toml  semantic_analyzer.py  symbol_table.py  test_input.rlang  test_input_env.py
codegen/: CodeGenerator.py
docs/: GRAMMAR.md
examples/: alien_lander.rlang
grammers/: RLang.g4
src/rlang/: cli.py  ir.py  semantic_analyzer.py
src/rlang/codegen/: CodeGenerator.py
